[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["easyrsapy"]
[tool.hatch.version]
path = "easyrsapy/__init__.py"

[project]
name = "easyrsapy"
dynamic = ["version"]
description = "A Pythonic wrapper for Easy-RSA PKI management."
readme = "README.md"
authors = [
    {name = "Thierry de Pauw", email = "thierry@thinkinglabs.io"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
